--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
- "prefix": "!",
+  "token": "MTQ2MzI1NDc0MjAxMTc0MDI2Mg.GI48z8.MA1sj_gY9bxDfcgslWaD8pjJ0kJkMp1hNkx9PY",
+  "prefix": "!",
   "categoriaPartidas": "1463269500920266966",
   "canalPendencias": "1463301754878820505",
   "canalResultados": "1463260797604987014"
