--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "liga-cs2-bot",
+  "name": "bot-discord",
   "version": "1.0.0",
-  "description": "Bot da liga amadora de CS2",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5"
   }
 }
