--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "bot-discord",
+  "name": "bot-bss",
   "version": "1.0.0",
+  "description": "Bot da liga BSS",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.3",
+    "discord.js": "^14.14.1",
+    "mongoose": "^8.0.0",
     "dotenv": "^16.4.5"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "Anthony Gabriel",
+  "license": "MIT"
 }
